Change footer topline color, fix info alignment

--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -4,7 +4,7 @@
 
   .container {
     align-items: flex-start;
-    border-top: 1px solid var(--dark-color-grey);
+    border-top: 1px solid rgba(27, 27, 27, 0.3);
     display: flex;
     justify-content: space-between;
     padding-top: rem(60);
@@ -101,7 +101,10 @@
 
       &-text {
         line-height: 1.6;
-        text-align: center;
+
+        @include media('<=sm') {
+          text-align: center;
+        }
       }
     }
   }
